--- a/stylesheets/spacing.css
+++ b/stylesheets/spacing.css
@@ -21,6 +21,10 @@
   padding-right: 20px;
 }
 
+.pt-2 {
+  padding-top: 8px;
+}
+
 .py-3 {
   padding-top: 12px;
   padding-bottom: 12px;
